tests/trybuild/tuple-struct-without-attribute.stderr
error: proc-macro derive panicked
 --> tests/trybuild/tuple-struct-without-attribute.rs:3:10
  |
3 | #[derive(Get)]
  |          ^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: "expected attribute on tuple struct field"
